Render piano SVGs with highlighting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 num = "0.4"
 num-derive = "0.3"
 num-traits = "0.2"
-rust-music-theory = "0.2"
 lazy_static = "1.4.0"
+svg = "0.13.1"
+regex = "1.9.1"
